--- a/index.html
+++ b/index.html
@@ -75,12 +75,30 @@
                     <img src="./image/rating.png" alt="">
                     <img src="./image/star.png" alt="">
                 </div>
+                
                 </div>
                 <div class="pt-42 ">
                     <img src="./image/banner.png" alt="">
                 </div>
+
             </div>
 
+        </div>
+    </section>
+
+    <!-------------------- Brand Part------------- -->
+
+    <section class="bg-linear-to-b from-[#084FC7] to-[#80afff]">
+        <div class="container mx-auto py-10">
+            <div class="flex justify-between">
+                <img src="./image/brand1.png.png" alt="" class="w-23 h-9">
+                <img src="./image/brand2.png.png" alt="" class="w-28 h-7">
+                <img src="./image/brand3.png.png" alt="" class="w-28 h-14">
+                <img src="./image/brand4.png.png" alt="" class="w-40 h-9">
+                <img src="./image/brand5.png.png" alt="" class="w-23 h-9">
+                <img src="./image/brand6.png.png" alt="" class="w-25 h-9">
+
+            </div>
         </div>
     </section>
 
